add configuration properties to handle multiple foundations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 cf.apiHost=api.run.pivotal.io
 cf.username=YOUR_USERNAME
-cf.password=YOUR_PASSOWRD
+cf.password=YOUR_PASSWORD
+
+# List of foundations
+foundations.names[0]=pws
+foundations.names[1]=homelab
+
+# 3 maps (apiHost, username, password) with the foundation as key
+foundations.apiHost.pws=api.run.pivotal.io
+foundations.username.pws=YOUR_USERNAME
+foundations.password.pws=YOUR_PASSWORD
+
+foundations.apiHost.homelab=api.system.homelab.lan
+foundations.username.homelab=YOUR_USERNAME
+foundations.password.homelab=YOUR_PASSWORD
+
+
+
