add support to manage multiple foundation connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 cf.apiHost=api.run.pivotal.io
-cf.username=YOUR_USERNAME
-cf.password=YOUR_PASSWORD
+cf.username=CHANGE_ME
+cf.password=CHANGE_ME
 
 # List of foundations
-foundations.names[0]=pws
-foundations.names[1]=homelab
+usage.foundations[0].name=pws
+usage.foundations[0].apiHost=api.run.pivotal.io
+usage.foundations[0].username=CHANGE_ME
+usage.foundations[0].password=CHANGE_ME
+# usage.foundations[0].skipSslValidation=false
 
-# 3 maps (apiHost, username, password) with the foundation as key
-foundations.apiHost.pws=api.run.pivotal.io
-foundations.username.pws=YOUR_USERNAME
-foundations.password.pws=YOUR_PASSWORD
-
-foundations.apiHost.homelab=api.system.homelab.lan
-foundations.username.homelab=YOUR_USERNAME
-foundations.password.homelab=YOUR_PASSWORD
-
+usage.foundations[1].name=homelab
+usage.foundations[1].apiHost=api.system.pcf.homelab.lan
+usage.foundations[1].username=CHANGE_ME
+usage.foundations[1].password=CHANGE_ME
+usage.foundations[1].skipSslValidation=true
 
 
